@@ -19,6 +19,7 @@
     <string id="32032">Turn off Ditto Channels</string>  
     <string id="32033">Turn off CF Channels</string>  
     <string id="32034">Turn off Ipbox Channels</string>  
+    <string id="32035">Turn off YP Channels</string>  
     <string id="32031">Do not cache</string>  
     <string id="32023">SSS Maxbitrate</string>
         <string id="32024">Willow US Proxy Address</string>
